k8s/fe-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: cert-service
spec:
  selector:
    app: nextjs
  ports:
    - port: 3001
      targetPort: 3001
