k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cert-service
  namespace: cert-service
spec:
  selector:
    app: cert-service
  ports:
    - port: 3000
      targetPort: 3000
