k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-service-ingress
  namespace: cert-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.cert.com
        - app.cert.com
      secretName: tls-secret
  rules:
    - host: api.cert.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cert-service
                port:
                  number: 3000
    - host: app.cert.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-service
                port:
                  number: 3001
